--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,7 @@
 <div class="footer-container">
-    <div class="h-card bio">
-        {{- partial "hcard.html" . -}}
-    </div>
-    {{- with .Site.Params.SiteFooterText -}}
-    <div class="footer-text footer-right">
+    <div class="footer-text">
         <p>
-            {{ . | markdownify }}
+        {{ time.Now.Year }} shagen.me (created with <a href="https://gohugo.io">hugo</a> &amp; <a href="https://github.com/brianreumere/plague">plague</a>)
         </p>
     </div>
-    {{- end -}}
-</div>
-<div class="h-card social">
-    {{ partial "social.html" . -}}
 </div>
