--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,12 @@
 h1 {
     margin-bottom: 0.3em;
 }
+h2 {
+    margin-top: 1.3em;
+}
+p {
+    margin-top: 0.5em;
+}
 .paste-list {
     font-family: 'SF Mono', 'Consolas', monospace;
 }
@@ -15,4 +21,13 @@ h1 {
     list-style-type: circle;
     padding-bottom: 4px;
     
+}
+img {
+  max-width: 100%;    
+}
+a:link, a:visited, a:active {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
 }
