--- a/layouts/shortcodes/blogintro.html
+++ b/layouts/shortcodes/blogintro.html
@@ -1,3 +1,3 @@
-<small>
+<quote><small>
     This is a technical article. I'm not targeting the complete beginner, and will expect that you know basic administration tasks. My articles are jumping right in, without explaining what to install or describing what each command does. Read manpages to understand unknown commands. If a command cannot be found, install the required package.
-</small>
+</small></quote>
