--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,7 +10,7 @@
         <a class="post-link" href="{{ .RelPermalink }}">{{ .Title }}</a>
         <span class="post-date">
             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">, created on {{ .Date | time.Format "2006-01-02" }}</time>
-    {{ if .Params.tags }}(tags: {{ range .Params.tags }}{{ delimit . ", " }}{{ end }}{{end}}
+    {{- if .Params.tags }}(tags: {{ range .Params.tags }}{{ . }}{{ end }}{{- end }}
         </span>
     </li>
 {{ end }}
