--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -31,3 +31,10 @@ a:link, a:visited, a:active {
 a:hover {
     text-decoration: underline;
 }
+code {
+    padding: 2px;
+    background-color: var(--preformatted-background-color);
+    color: var(--preformatted-text-color);
+    border: 1px solid var(--preformatted-background-color);
+    border-radius: 1px;
+}
