--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -37,4 +37,5 @@ code {
     color: var(--preformatted-text-color);
     border: 1px solid var(--preformatted-background-color);
     border-radius: 5px;
+    white-space: pre-wrap;
 }
