--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -34,5 +34,7 @@ a:hover {
 code {
     padding: 2px;
     color: var(--preformatted-text-color);
+    border: 1px solid var(--preformatted-background-color);
+    border-radius: 3px;
     word-break: keep-all;
 }
