--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
         {{- if ge .Date.Unix now.Unix }}<sup>[Future]</sup>{{- end }}
         <a class="post-link" href="{{ .RelPermalink }}">{{ .Title }}</a>
         <span class="post-date">
-            <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">, created on {{ .Date | time.Format "2006-01-02" }}</time>
+            <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">created on {{ .Date | time.Format "2006-01-02" }}</time>
         </span>
     </li>
 {{ end }}
