--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
 
 {{ range .Paginator.Pages }}
     <li class="post-list-li">
-        {{- if .Draft }}[DRAFT]{{- end }}
+        {{- if .Draft }}<sup>*</sup>{{- end }}
         <a class="post-link" href="{{ .RelPermalink }}">{{ .Title }}</a>
         <span class="post-date">
             <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">created on {{ .Date | time.Format "2006-01-02" }}</time>{{- if ge .Date.Unix now.Unix }} [Future]{{- end }}
